# backend/driver/openapi.yaml
@@ -3,8 +3,115 @@
 
 openapi: 3.0.3
 info:
-    title: ""
+    title: Driver API
     version: 0.0.1
-paths: {}
+paths:
+    /driver/get-verify-code/{telephone}:
+        get:
+            tags:
+                - Driver
+            description: 获取验证码服务
+            operationId: Driver_GetVerifyCode
+            parameters:
+                - name: telephone
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/GetVerifyCodeResp'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /driver/submit-phone:
+        post:
+            tags:
+                - Driver
+            description: 提交电话号码
+            operationId: Driver_SubmitPhone
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/SubmitPhoneReq'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/SubmitPhoneResp'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
 components:
-    schemas: {}
+    schemas:
+        GetVerifyCodeResp:
+            type: object
+            properties:
+                code:
+                    type: string
+                message:
+                    type: string
+                verifyCode:
+                    type: string
+                    description: 验证码
+                verifyCodeTime:
+                    type: string
+                    description: 生成时间 unix timestamp
+                verifyCodeLife:
+                    type: integer
+                    description: 有效期， 单位 second
+                    format: int32
+        GoogleProtobufAny:
+            type: object
+            properties:
+                '@type':
+                    type: string
+                    description: The type of the serialized message.
+            additionalProperties: true
+            description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
+        Status:
+            type: object
+            properties:
+                code:
+                    type: integer
+                    description: The status code, which should be an enum value of [google.rpc.Code][google.rpc.Code].
+                    format: int32
+                message:
+                    type: string
+                    description: A developer-facing error message, which should be in English. Any user-facing error message should be localized and sent in the [google.rpc.Status.details][google.rpc.Status.details] field, or localized by the client.
+                details:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/GoogleProtobufAny'
+                    description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
+            description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
+        SubmitPhoneReq:
+            type: object
+            properties:
+                telephone:
+                    type: string
+        SubmitPhoneResp:
+            type: object
+            properties:
+                code:
+                    type: string
+                message:
+                    type: string
+                status:
+                    type: string
+tags:
+    - name: Driver
